--- a/etc/newrelic-infra.yml
+++ b/etc/newrelic-infra.yml
@@ -591,7 +591,7 @@ license_key: your_license_key
 #            the following error will be raised: "Existing pid-file, can't 
 #            guarantee no other newrelic-infra agent is running".
 #
-#pid_file:
+pid_file: var/run/newrelic-infra/newrelic-infra.pid
 #
 
 #
@@ -602,7 +602,7 @@ license_key: your_license_key
 # Default  : Windows: %PROGRAMDATA%\New Relic\newrelic-infra
 #          : Linux: Not applicable
 #
-#app_data_dir:
+app_data_dir: var/db/newrelic-infra/data
 #
 
 #
